--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,10 +16,10 @@ h1.project-name {
     font-family: 'Tomcat Bold';
     src: url('Tomcat-Bold.eot');
     src: local('Tomcat Bold'), local('Tomcat-Bold'),
-        url('./../Tomcat-Bold.eot?#iefix') format('embedded-opentype'),
-        url('./../Tomcat-Bold.woff2') format('woff2'),
-        url('./../Tomcat-Bold.woff') format('woff'),
-        url('./../Tomcat-Bold.ttf') format('truetype');
+        url('./../fonts/Tomcat-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./../fonts/Tomcat-Bold.woff2') format('woff2'),
+        url('./../fonts/Tomcat-Bold.woff') format('woff'),
+        url('./../fonts/Tomcat-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -29,10 +29,10 @@ h1.project-name {
     font-family: 'Tomcat Regular';
     src: url('Tomcat-Regular.eot');
     src: local('Tomcat'), local('Tomcat-Regular'),
-        url('./../Tomcat-Regular.eot?#iefix') format('embedded-opentype'),
-        url('./../Tomcat-Regular.woff2') format('woff2'),
-        url('./../Tomcat-Regular.woff') format('woff'),
-        url('./../Tomcat-Regular.ttf') format('truetype');
+        url('./../fonts/Tomcat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./../fonts/Tomcat-Regular.woff2') format('woff2'),
+        url('./../fonts/Tomcat-Regular.woff') format('woff'),
+        url('./../fonts/Tomcat-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
