--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,9 +8,9 @@
 
 h1.project-name {
 	font-family: 'Tomcat Bold';
-	font-size: 6.25em;
+	font-size: 4.25em;
 	font-style: italic;
-	line-height: 1.00rem;
+	line-height: 1.00em;
 }
 
 @font-face {
